# AgentSec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_report.md
.github/workflows/: agentsec.yml  docs.yml
agentsec/: __init__.py  baseline.py  cli.py  owasp.py  report.py  sarif.py  scanner.py
agentsec/parsers/: __init__.py  core.py  json_parser.py  toml_parser.py  yaml_parser.py
agentsec/rules/: __init__.py  additional.py  base.py
agentsec/utils/: toml_compat.py
docs/: CNAME  demo-script.md  mkdocs.yml  screenshots.md
docs/docs/: cicd.md  faq.md  index.md  installation.md  owasp.md  rules.md  usage.md
scripts/: check_version_policy.py  scan_github.py
tests/: test_baseline.py  test_compat.py  test_owasp.py  test_scanner.py  test_versioning.py
tests/fixtures/: dangerous_mcp.json
