[project]
name = "agentsec-cli"
version = "1.0.3"
description = "Static security scanner for AI coding agents and MCP configurations"
readme = "README.md"
authors = [{name = "locface"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0,<9",
    "pyyaml>=6.0,<7",
    "toml>=0.10.2,<1",
    "tomli>=2.0.1,<3; python_version < \"3.11\"",
]

[project.urls]
homepage = "https://locface.github.io/AgentSec/"
repository = "https://github.com/locface/AgentSec"
documentation = "https://locface.github.io/AgentSec/docs/"
changelog = "https://github.com/locface/AgentSec/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agentsec = "agentsec.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentsec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mcp-servers", ".venv", "other_from_ags", "docs"]
python_files = ["test_*.py"]
