[project]
name = "agentsec-cli"
dynamic = ["version"]
description = "Static security scanner for AI coding agents and MCP configurations"
readme = "README.md"
authors = [{name = "locface"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0,<9",
    "pyyaml>=6.0,<7",
    "toml>=0.10.2,<1",
    "tomli>=2.0.1,<3; python_version < \"3.11\"",
    "pathspec>=0.12,<2",
]

[project.urls]
homepage = "https://locface.github.io/AgentSec/"
repository = "https://github.com/locface/AgentSec"
documentation = "https://locface.github.io/AgentSec/docs/"
changelog = "https://github.com/locface/AgentSec/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "setuptools-scm>=8",
]

[project.scripts]
agentsec = "agentsec.cli:cli"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentsec*"]

[tool.setuptools_scm]
# Git tags are the single source of truth for the version.
# Tag format expected: vX.Y.Z (e.g. v1.0.4). setuptools-scm strips the
# leading "v" automatically. Untagged commits get a PEP 440-compliant
# local/dev version (e.g. 1.0.5.dev3+gabcdef1).
version_file = "agentsec/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mcp-servers", ".venv", "other_from_ags", "docs"]
python_files = ["test_*.py"]
